--- a/frontend/index.html
+++ b/frontend/index.html
@@ -186,6 +186,14 @@
                         </div>
                         <button class="btn btn-secondary btn-sm" id="resetPromptBtn" style="margin-top: 8px;">Reset to Default</button>
                     </div>
+                    <div class="setting-group">
+                        <label for="coachRatingPrompt">Coach Rating Prompt:</label>
+                        <textarea id="coachRatingPrompt" rows="8" placeholder="Enter the coach's analysis prompt for conversation ratings..."></textarea>
+                        <div class="setting-hint">
+                            <small>This prompt is used by the AI coach to analyze and rate your conversation after it ends. The coach will provide feedback and a rating from 1-5 based on this prompt.</small>
+                        </div>
+                        <button class="btn btn-secondary btn-sm" id="resetCoachRatingPromptBtn" style="margin-top: 8px;">Reset to Default</button>
+                    </div>
                 </div>
                 <div class="modal-footer">
 <button class="btn btn-secondary" id="cancelSettingsBtn" data-i18n="cancel">Cancel</button>
